tests/od2trips/errors/false_options/false_input/errors.od2trips
Error: Could not open 'xxxx/input_od_o.fma'.
Quitting (on error).
